--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/favicon-16x16.png" />
     <link rel="stylesheet" href="./style.css" />
+    <script defer src="./js/script.js"></script>
     <title>Pokedex</title>
   </head>
   <body>
     <main>
-      <img src="" alt="pokemon" class="pokemon__image" />
+      <img src="#" alt="pokemon" class="pokemon__image" />
       <h1 class="pokemon__data">
-        <span class="pokemon__number">6</span>
-        <span class="pokemon__name">charizard</span>
+        <span class="pokemon__number"></span> -
+        <span class="pokemon__name"></span>
       </h1>
       <form class="form">
         <input
@@ -23,6 +24,10 @@
           required
         />
       </form>
+      <div class="buttons">
+        <button class="button btn-prev">Prev &lt;</button>
+        <button class="button btn-next">Next &gt;</button>
+      </div>
       <img src="./img/pokedex.png" alt="pokedex" class="pokedex" />
     </main>
   </body>
